# c-logger

./: CMakeLists.txt  Makefile  readme.txt
etc/: log.conf
include/: logger.h
src/: logger.c
test/: logger_app_test.c
